<resources>
    <string name="app_name">My Account</string>
    <string name="data_base">DataBase</string>
    <string name="app_Number">8460121117</string>
    <string name="app_Number_bracket">(Mo. 8460121117)</string>
    <string name="action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="action_done">Done</string>
    <string name="error_image_not_exist">Image error</string>
    <string name="error_no_permission">Has no permission</string>
    <string name="folder_all">All Images</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="permission_dialog_cancel">CANCEL</string>
    <string name="permission_dialog_ok">OK</string>
    <string name="permission_dialog_title">Permission Deny</string>
    <string name="permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="photo_unit">Shot</string>
    <string name="preview">Preview</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="title_activity_new_tutorial">NewTutorial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="customers">Customer</string>
    <string name="billing">Invoice</string>
    <string name="deposit">Deposit</string>
    <string name="credit">Credit</string>
    <string name="complete">Complete</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <!-- The class name to the BottomSheetBehavior -->
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>
    <!-- The text pattern for the character counter -->
    <string name="character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="accounts">Account</string>
    <string name="stock">Product</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="share_image">Share Image</string>
    <string name="share_data">Share Data</string>
    <string name="all_transaction">All Transactions</string>
    <string name="back_up">Back Up</string>
    <string name="restore">Restore Back Up</string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_later">Pay Later</string>
    <string name="no_data_available">No Data Available</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="productName">Product Name</string>
    <string name="ProductQuantity">Product Quantity</string>
    <string name="ProductPrice">Product Price</string>
    <string name="productTax">Product Tax</string>
    <string name="currency_india">₹</string>
    <string name="spaced_currency_india"> ₹</string>
    <string name="add_product">Add Product</string>
    <string name="taxes">Taxes</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="addition_info">Additional info</string>
    <string name="collect">Collect</string>
    <string name="amount_to">Amount to</string>
    <string name="customer_name">Customer Name</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_payment">Add Payment</string>
    <string name="product_total">Product Total</string>
    <string name="product_discount">Product Discount</string>
    <string name="sub_total">Sub Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="invoice_disc">Invoice Discount</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="discount">Discount</string>
    <string name="tax">GST</string>
    <string name="invoice_total">Invoice Total</string>
    <string name="invoice_discount">Invoice Discount</string>
    <string name="invoice_sub_total">Invoice Sub Total</string>
    <string name="invoice_paid">Invoice Paid</string>
    <string name="invoice_due">Invoice Due</string>
    <string name="remainder">Remainder</string>
    <string name="editProfile">Edit Profile</string>
    <string name="shareData">Share Data</string>
    <string name="createInvoice">Create Invoice</string>
    <string name="charge">Charge</string>
    <string name="payment">Payment</string>
    <string name="new_payment">New Payment</string>
    <string name="customerDetails">Customer Details</string>
    <string name="editprofile">Edit Product</string>
    <string name="more">More</string>
    <string name="add_remainder">Add Remainder</string>
    <string name="invoice">Invoice</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="_19_june_2016">19 June, 2016</string>
    <string name="edit_card_details">Edit Card Details</string>
    <string name="sopari">Sopari</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="gst_on_sub_total">GST on Sub Total</string>
    <string name="qnty_505_00_kg"><![CDATA[Qnty. --> 505.00 KG]]></string>
    <string name="gst_5"><![CDATA[GST --> 5%]]></string>
    <string name="price_304_00"><![CDATA[Price --> $ 304.00]]></string>
    <string name="keval">Keval</string>
    <string name="_03_11_2017">03-11-2017</string>
    <string name="total_products_2"><![CDATA[Total Products --> 2]]></string>
    <string name="invoice_no_1"><![CDATA[Invoice No. --> 1]]></string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="final_total">Final Total</string>
    <string name="payment_no_1">Payment No. 1</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="_0">0</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_number">Enter Customer Number</string>
    <string name="enter_customer_email">Enter Customer Email</string>
    <string name="enter_gstn">Enter GSTN</string>
    <string name="enter_invoice_address">Enter Invoice Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_city_pincode">Enter City Pincode</string>
    <string name="enter_country">Enter Country</string>
    <string name="ship_to_different_address">Ship to Different Address</string>
    <string name="enter_shipping_address">Enter Shipping Address</string>
    <string name="enter_shipping_city">Enter Shipping City</string>
    <string name="enter_shipping_state">Enter Shipping State</string>
    <string name="enter_shipping_city_pincode">Enter Shipping City Pincode</string>
    <string name="enter_shipping_country">Enter Shipping Country</string>
    <string name="submit">Submit</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="keval_cholera">Keval Cholera</string>
    <string name="dineshchandra_amp_co"><![CDATA[DineshChandra & Co.]]></string>
    <string name="_9879374040">9879374040</string>
    <string name="_100000">100000</string>
    <string name="product_gst">Product GST</string>
    <string name="change_profile_pic">Change Profile Pic</string>
    <string name="dr">Dr.</string>
    <string name="search_state">Search State</string>
    <string name="total_product_2">Total Product (2)</string>
    <string name="edit_stock">Edit Stock</string>
    <string name="description_image_1">Description</string>
    <string name="amount_due_1500">Amount Due 1500</string>

    <string-array name="addSchedule">

        <item name="collect">Collect</item>
        <item name="give">Give</item>

    </string-array>

    <string-array name="statesName">


        <item name="1">Andaman and Nicobar Islands</item>
        <item name="2">Andhra Pradesh</item>
        <item name="3">Arunachal Pradesh</item>
        <item name="4">Assam</item>
        <item name="5">Bihar</item>
        <item name="6">Chandigarh</item>
        <item name="7">Chhattisgarh</item>
        <item name="8">	Dadra and Nagar Haveli</item>
        <item name="9">Daman and Diu</item>
        <item name="10">Delhi</item>
        <item name="11">Goa</item>
        <item name="12">Gujarat</item>
        <item name="13">Haryana</item>
        <item name="14">Himachal Pradesh</item>
        <item name="15">Jammu and Kashmir</item>
        <item name="16">Jharkhand</item>
        <item name="17">Karnataka</item>
        <item name="18">Kerala</item>
        <item name="19">Lakshadweep</item>
        <item name="20">Madhya Pradesh</item>
        <item name="21">Maharashtra</item>
        <item name="22">Manipur</item>
        <item name="23">Meghalaya</item>
        <item name="24">Mizoram</item>
        <item name="25">Nagaland</item>
        <item name="26">Odisha</item>
        <item name="27">Puducherry</item>
        <item name="28">Punjab</item>
        <item name="29">Rajasthan</item>
        <item name="30">Sikkim</item>
        <item name="31">Tamil Nadu</item>
        <item name="32">Telangana</item>
        <item name="33">Tripura</item>
        <item name="34">Uttar Pradesh</item>
        <item name="35">Uttarakhand</item>
        <item name="36">West Bengal</item>

    </string-array>

    <string-array name="gender">

        <item name="male">Male</item>
        <item name="female">Female</item>

    </string-array>

</resources>
