<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding10">

    <TextView
        android:id="@+id/tvMoreAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:padding="@dimen/padding10"
        android:text="@string/accounts"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="@dimen/margin20"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tvMoreAllTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:padding="@dimen/padding10"
        android:text="@string/all_transaction"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="@dimen/margin20"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tvMoreDailySchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:padding="@dimen/padding10"
        android:text="@string/remainder"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="@dimen/margin20"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tvMoreBackUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:padding="@dimen/padding10"
        android:text="@string/back_up"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="@dimen/margin20"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tvMoreRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin10"
        android:padding="@dimen/padding10"
        android:text="@string/restore"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20"
        android:visibility="gone" />

    <View
        android:id="@+id/vMoreRestore"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="@dimen/margin20"
        android:background="@color/black"
        android:visibility="gone" />

</LinearLayout>